update application properties settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cafequyettranvu
-spring.datasource.username=root
-spring.datasource.password=13112000Nhatrang
+spring.datasource.username=quyettranvu
+spring.datasource.password=**********
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=**********
+spring.redis.database=1
+spring.redis.key-prefix=cafequyettranvu
+spring.redis.channel-name=CAFE_QUYET_CHANNEL
+spring.redis.stream-name="CAFE_QUYET_STREAM
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.batch.jdbc.initialize-schema=always
 
 server.port=8081
 
